# sha2-with-c-intrinsic

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  benchmark_example.md
cmake/: arch.cmake  clang-format.cmake  compilation-flags.cmake  sources.cmake  test_aarch64_sha_ni.c  test_x86_64_avx2.c  test_x86_64_avx512.c  test_x86_64_sha_ni.c
include/: sha.h
include/internal/: avx2_defs.h  avx512_defs.h  avx_defs.h  defs.h  measurements.h  neon_defs.h  sha256_defs.h  sha512_defs.h
src/: sha256.c  sha256_compress_aarch64_sha_ext.c  sha256_compress_generic.c  sha256_compress_x86_64_avx.c  sha256_compress_x86_64_avx2.c  sha256_compress_x86_64_avx512.c  sha256_compress_x86_64_avx_helper.c  sha256_compress_x86_64_sha_ext.c  sha256_consts.c  sha512.c  sha512_compress_generic.c  sha512_compress_x86_64_avx.c  sha512_compress_x86_64_avx2.c  sha512_compress_x86_64_avx512.c  sha512_compress_x86_64_avx_helper.c  sha512_consts.c
src/openssl/: README.md  openssl_cpu_globals.c
src/openssl/linux/: sha256-armv8.S  sha256-x86_64.s  sha512-armv8.S  sha512-x86_64.s
src/openssl/macos/: sha256-x86_64.s  sha512-x86_64.s
tests/: main_speed.c  main_tests.c  pre-commit-script.sh  test.h
